kustomize-units/syslog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "syslog"
  namespace: "syslog"
spec:
  ports:
    - name: tcp-port-514
      port: 514
      targetPort: 514
      protocol: TCP
    - name: tcp-port-601
      port: 601
      targetPort: 601
      protocol: TCP
    - name: tcp-port-6514
      port: 6514
      targetPort: 6514
      protocol: TCP
    - name: udp-port-514
      port: 514
      targetPort: 514
      protocol: UDP
  type: ClusterIP
  selector:
    app: "syslog"
